[workspace]
members = ["lexer", "int", "parser", "tree", "ast"]

[package]
name = "impc"
version = "0.2.0"
edition = "2021"
description = "A compiler for the IMP programming language"
readme = "README.md"
repository = "https://github.com/eikopf/impc"
license = "MIT"
keywords = ["compiler", "interpreter"]
categories = ["compilers", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
argh = "0.1.12"
ast = { version = "0.1.0", path = "ast" }
better-panic = "0.3.0"
int = { version = "0.1.0", path = "int" }
nom = "7.1.3"
tree = { version = "0.1.0", path = "tree" }
