[workspace]
members = ["lexer", "int", "parser", "tree", "ast"]

[workspace.package]
version = "0.2.0"
repository = "https://github.com/eikopf/impc"
license = "MIT"
keywords = ["compiler", "interpreter"]
categories = ["compilers"]

[package]
name = "impc"
edition = "2021"
description = "A compiler for the IMP programming language"
readme = "README.md"
version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
argh = "0.1.12"
ast = { version = "0.2.0", path = "ast" }
better-panic = "0.3.0"
int = { version = "0.2.0", path = "int" }
nom = "7.1.3"
tree = { version = "0.2.0", path = "tree" }
