[workspace]
members = ["lexer", "int", "parser", "tree", "ast"]

[workspace.package]
repository = "https://github.com/eikopf/impc"
license = "MIT"
keywords = ["compiler", "interpreter"]
categories = ["compilers"]

[package]
name = "impc"
edition = "2021"
description = "A compiler for the IMP programming language"
readme = "README.md"
version = "0.2.1"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# note for future publications: cargo will just assume that any crate
# on crates.io with a matching name and version number is the correct
# crate, so explicitly defining package names is MANDATORY

[dependencies]
anyhow = "1.0.82"
argh = "0.1.12"
ast = { version = "0.2.0", path = "ast", package = "imp_ast" }
better-panic = "0.3.0"
int = { version = "0.3.0", path = "int", package = "imp_int", features = ["bigint"] }
nom = "7.1.3"
tree = { version = "0.2.0", path = "tree", package = "imp_tree" }
