[package]
name = "ast"
version = "0.1.0"
edition = "2021"

[dependencies]
int = { version = "0.1.0", path = "../int" }
lexer = { version = "0.1.0", path = "../lexer" }
nom = "7.1.3"
nom-supreme = "0.8.0"
parser = { version = "0.1.0", path = "../parser" }
thiserror = "1.0.58"
tree = { version = "0.1.0", path = "../tree" }
