[package]
name = "ast"
edition = "2021"
version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
int = { version = "0.2.0", path = "../int" }
lexer = { version = "0.2.0", path = "../lexer" }
nom = "7.1.3"
nom-supreme = "0.8.0"
parser = { version = "0.2.0", path = "../parser" }
thiserror = "1.0.58"
tree = { version = "0.2.0", path = "../tree" }
