[package]
name = "imp_ast"
edition = "2021"
version = "0.2.0"
description = "Abstract syntax trees for IMP programs"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
int = { version = "0.2.0", path = "../int", package = "imp_int" }
lexer = { version = "0.2.0", path = "../lexer", package = "imp_lexer" }
nom = "7.1.3"
nom-supreme = "0.8.0"
parser = { version = "0.2.0", path = "../parser", package = "imp_parser" }
thiserror = "1.0.58"
tree = { version = "0.2.0", path = "../tree", package = "imp_tree" }
