[package]
name = "imp_int"
edition = "2021"
version = "0.3.1"
description = "A collection of thinly-wrapped integer types modelling IMP integer semantics"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
bigint = ["dep:num-bigint"]

[dependencies]
num-bigint = { version = "0.4.4", optional = true }
num-traits = "0.2.18"

[package.metadata.docs.rs]
# enables features in documentation on docs.rs
all-features = true
