[package]
name = "imp_lexer"
edition = "2021"
version = "0.2.0"
description = "A nom-based lexer for the IMP programming language"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nom = "7.1.3"

[dev-dependencies]
int = { version = "0.2.0", path = "../int" }
